# HandmadeCMakeVS

./: CMakeLists.txt  CMakeSettings.json  LICENSE  README.md  launch.vs.json
